# air

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
src/: CMakeLists.txt
src/api/: Air.cpp  Air.h  Air_c.cpp  Air_c.h
src/chain/: ChainManager.cpp  ChainManager.h
src/collection/: CollectionCorHandler.h  CollectionManager.cpp  CollectionManager.h  CollectionObserver.cpp  CollectionObserver.h  Collector.cpp  Collector.h  SwitchGear.cpp  SwitchGear.h  SwitchGearCorHandler.h
src/collection/writer/: CountWriter.cpp  CountWriter.h  HistogramWriter.cpp  HistogramWriter.h  LatencyWriter.cpp  LatencyWriter.h  PerformanceWriter.cpp  PerformanceWriter.h  QueueWriter.cpp  QueueWriter.h  UtilizationWriter.cpp  UtilizationWriter.h  Writer.cpp  Writer.h
src/config/: ConfigChecker.cpp  ConfigChecker.h  ConfigCheckerKey.h  ConfigCheckerLib.h  ConfigCheckerValue.h  ConfigCheckerValueBucket.h  ConfigCheckerValueHistogram.h  ConfigInterface.h  ConfigLib.h  ConfigParser.h  ConfigReader.h  ConfigSyntax.cpp  ConfigSyntax.h
src/data_structure/: NodeData.cpp  NodeData.h  NodeInitializer.cpp  NodeInitializer.h  NodeManager.cpp  NodeManager.h
src/input/: In.cpp  In.h  InCorHandler.h
src/lib/: Casting.h  Data.h  Design.cpp  Design.h  Hash.cpp  Hash.h  Lock.h  Msg.h  MsgQueue.h  Protocol.h  StringView.h  Timelag.h  Type.h
src/lib/json/: Json.h  Jsondoc.h  Jsoner.h  Jsonparser.h  Jsonprint.h  Jsonrange.h  Jsontype.h
src/meta/: GlobalMeta.h  NodeMeta.h
src/object/: Instance.cpp  Instance.h
src/output/: Out.cpp  Out.h  OutputCorHandler.h  OutputManager.cpp  OutputManager.h  OutputObserver.cpp  OutputObserver.h
src/policy/: PolicyCorHandler.h  PolicyObserver.cpp  PolicyObserver.h  RuleManager.cpp  RuleManager.h  Ruler.cpp  Ruler.h
src/process/: PreprocessCorHandler.h  Preprocessor.cpp  Preprocessor.h  ProcessCorHandler.h  ProcessManager.cpp  ProcessManager.h  TimingDistributor.cpp  TimingDistributor.h
src/process/processor/: CountProcessor.cpp  CountProcessor.h  HistogramProcessor.cpp  HistogramProcessor.h  LatencyProcessor.cpp  LatencyProcessor.h  PerformanceProcessor.cpp  PerformanceProcessor.h  Processor.cpp  Processor.h  QueueProcessor.cpp  QueueProcessor.h  UtilizationProcessor.cpp  UtilizationProcessor.h
src/stream/: Stream.cpp  Stream.h  StreamCorHandler.h
src/target_detector/: DetectCorHandler.h  Detector.cpp  Detector.h
src/thread/: Thread.cpp  Thread.h  ThreadManager.cpp  ThreadManager.h
src/transfer/: Task.cpp  Task.h  Transfer.cpp  Transfer.h  TransferCorHandler.h
test/system_test/: CMakeLists.txt
test/system_test/api_histogram/: CMakeLists.txt  histogram_log.cpp  histogram_log.h  main.cpp
test/system_test/benchmark/: CMakeLists.txt  main.cpp
test/system_test/c_interface/: CMakeLists.txt  main.c
test/system_test/data_transfer/: CMakeLists.txt  delegator.cpp  delegator.h  dummy_log.cpp  dummy_log.h  main.cpp
test/system_test/io_mock/: CMakeLists.txt  dummy_io.cpp  dummy_io.h  main.cpp
test/system_test/latency_resolution/: CMakeLists.txt  latency_log.cpp  latency_log.h  main.cpp
test/system_test/many_log/: CMakeLists.txt  dummy_log.cpp  dummy_log.h  main.cpp
test/system_test/sparsely_log/: CMakeLists.txt  main.cpp  sparsely_log.cpp  sparsely_log.h
test/unit_test/: CMakeLists.txt
test/unit_test/api/: air_test.h  fake_node_data_array.h  main.cpp
test/unit_test/chain/: main.cpp
test/unit_test/collection/: main.cpp
test/unit_test/lib/: main.cpp
test/unit_test/policy/: main.cpp
test/unit_test/process/: main.cpp
test/unit_test/src/: CMakeLists.txt
test/unit_test/src/api/: air_test.cpp  air_test.h  fake_collection_manager.h  fake_instance_manager.h  fake_node_manager.h  main.cpp
test/unit_test/src/chain/: chain_manager_test.h  main.cpp  mock_global_meta.h
test/unit_test/src/collection/: collection_manager_test.cpp  collection_manager_test.h  collector_test.cpp  collector_test.h  mock_global_meta.h  mock_node_manager.h  mock_node_meta.h  mock_output_observer.h  writer_test.cpp  writer_test.h
test/unit_test/src/config/: config_checker_test.cpp  config_checker_test.h  config_interface_test.cpp  config_parser_test.cpp  config_parser_test.h  main.cpp
test/unit_test/src/data_structure/: main.cpp  mock_global_meta.h  mock_node_meta.h  node_data_test.cpp  node_data_test.h  node_initializer_test.cpp  node_initializer_test.h  node_manager_test.cpp  node_manager_test.h
test/unit_test/src/input/: fake_cli_send.h  fake_output_observer.h  in_test.h  main.cpp
test/unit_test/src/lib/: casting_test.cpp  casting_test.h  data_test.cpp  data_test.h  design_test.cpp  design_test.h  hash_test.cpp  hash_test.h  json_test.cpp  json_test.h  jsondoc_test.cpp  jsoner_test.cpp  jsonparser_test.cpp  jsonparser_test.h  jsonprint_test.cpp  jsonrange_test.cpp  jsontype_test.cpp  lock_test.cpp  lock_test.h  main.cpp  msg_test.cpp  msg_test.h  protocol_test.cpp  string_view_test.cpp  type_test.cpp  type_test.h
test/unit_test/src/meta/: global_meta_test.h  group_meta_test.h  main.cpp  node_meta_test.h
test/unit_test/src/object/: instance_test.h  main.cpp
test/unit_test/src/output/: fake_out.h  out_test.h  output_manager_test.h
test/unit_test/src/policy/: main.cpp  mock_collection_observer.h  mock_global_meta.h  mock_node_meta.h  mock_output_observer.h  policy_cor_handler_test.h
test/unit_test/src/process/: count_processor_test.cpp  count_processor_test.h  fake_global_meta_getter.h  fake_node_manager.h  histogram_processor_test.cpp  main.cpp  (+18 more)
test/unit_test/tool/: CMakeLists.txt
test/unit_test/transfer/: task_test.h  transfer_test.h
tool/c_interface_gen/: CMakeLists.txt  main.cpp
tool/cli/: CMakeLists.txt  CliLib.h  CliRecv.cpp  CliRecv.h  CliResult.cpp  CliResult.h  CliSend.cpp  CliSend.h  Main.cpp
tool/tui/: Book.cpp  Book.h  CMakeLists.txt  CliHandler.cpp  CliHandler.h  ConfigTree.h  EventType.h  FileData.cpp  FileData.h  FileDetector.cpp  FileDetector.h  KeyEventHandler.cpp  KeyEventHandler.h  LibToString.h  Main.cpp  MoveHandler.cpp  MoveHandler.h  Option.cpp  Option.h  Player.cpp  Player.h  Viewer.cpp  Viewer.h
(+16 files in other folders)
