file(GLOB_RECURSE SOURCE_FILES *.cpp)
add_executable(st_data_transfer ${SOURCE_FILES})
target_include_directories(st_data_transfer PUBLIC ${CMAKE_SOURCE_DIR})
target_compile_options(st_data_transfer PRIVATE -std=c++14 -Wall -Werror -O3 -mavx2 -fPIC)
target_link_libraries(st_data_transfer air pthread)
